<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  android:theme="@android:style/Theme.Wallpaper"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white" >
  <ImageView android:id="@+id/wallpaper" android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.88" android:clickable="true"
    android:contentDescription="@string/backgroundImage" android:focusable="true" android:scaleType="centerCrop" 
    android:src="@drawable/photo_20230326_10585066211"
    android:visibility="visible" tools:visibility="visible" />
  <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.4" android:background="@android:color/black"
    android:contentDescription="@string/darkBackgroundImage" />
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
    >
      <TextView
        android:id="@+id/userNamePrompttextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apn_setting_username"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/yellow" 
        android:textSize="28sp" 
        android:layout_marginTop="28dp" 
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/userNametextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        app:layout_constraintLeft_toRightOf="@id/userNamePrompttextView2"
        app:layout_constraintTop_toTopOf="@id/userNamePrompttextView2" />

      <TextView
        android:id="@+id/freeCreditPrompttextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freeCredit"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/yellow" 
        android:textSize="28sp" 
        app:layout_constraintTop_toBottomOf="@id/userNamePrompttextView2" />
      <TextView
        android:id="@+id/freeCredittextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        app:layout_constraintLeft_toRightOf="@id/freeCreditPrompttextView4"
        app:layout_constraintTop_toTopOf="@id/freeCreditPrompttextView4" />
      <TextView
        android:id="@+id/paidCreditPrompttextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/freeCreditPrompttextView4" />
      <CheckBox
        android:id="@+id/paidCredittextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/externalStoragePerformanceOptimizempty"
        app:layout_constraintStart_toStartOf="@id/paidCreditPrompttextView6"
        app:layout_constraintTop_toBottomOf="@id/paidCreditPrompttextView6" />
      <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectRootDirectoryin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paidCredittextView7" />
      <Button
        android:id="@+id/resetRootDirectoryss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetRootDirectoryin"
        app:layout_constraintTop_toBottomOf="@id/loginbutton"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </RelativeLayout>
</FrameLayout>
