<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="0dp">

  <ImageView android:id="@+id/wallpaper" android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.88" android:clickable="true"
    android:contentDescription="@string/backgroundImage" android:focusable="true" android:scaleType="centerCrop" 
    android:src="@drawable/dovi14wuwaai7j81080"
    android:visibility="visible"
    />
  <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:alpha="0.4" android:background="@android:color/black"
    android:contentDescription="@string/darkBackgroundImage" />
    <Button
        android:id="@+id/lanime_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/grantManageAllFilesPermission"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/appFrequencybutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lanime_button1"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:drawableRight="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/applicationFrequency"
        android:textColor="@android:color/white"
      android:visibility="invisible"
        android:textSize="20sp" />

    <Button
        android:id="@+id/appAliasbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appFrequencybutton1"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:drawableRight="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/applicationAlias"
        android:textColor="@android:color/white"
      android:visibility="invisible"
        android:textSize="20sp" />

    <Button
        android:id="@+id/myAccountbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appAliasbutton1"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:drawableRight="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/setRootDirectoryunt"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/ratelanime_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myAccountbutton1"
        android:layout_gravity="center"
        android:background="@drawable/button_selector"
        android:drawableEnd="@drawable/button_yjt"
        android:drawableRight="@drawable/button_yjt"
        android:src="@drawable/shape"
        android:text="@string/rateUs"
        android:textColor="@android:color/white"
      android:visibility="invisible"
        android:textSize="20sp" />
</RelativeLayout>
